--- a/V_1/popup.html
+++ b/V_1/popup.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Tweet Creator</title>
+    <title>Phi2 Web Text to Image</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 
 <body>
